--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@Fundacion-Instituto-Profesional-Duoc-UC/auy1102-pipeline",
+  "name": "@Matishac14/auy1102-pipeline",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Fundacion-Instituto-Profesional-Duoc-UC/AUY1102-Pipeline.git"
+    "url": "https://github.com/Matishac14/AUY1102-Pipeline-2.2.4.git/AUY1102-Pipeline.git"
   },
   "version": "1.0.0",
   "description": "AUY1102",
