--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@Matishac14/auy1102-pipeline",
+  "name": "@Matishac14/AUY1102-Pipeline-2.2.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/Matishac14/AUY1102-Pipeline-2.2.4.git/AUY1102-Pipeline.git"
