--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@Matishac14/AUY1102-Pipeline-2.2.4",
+  "name": "@AUY1102-001V-G1/AUY1102-001V-G1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Matishac14/AUY1102-Pipeline-2.2.4.git/AUY1102-Pipeline.git"
+    "url": "https://github.com/AUY1102-001V-G1/AUY1102-001V-G1.git"
   },
   "version": "1.0.0",
   "description": "AUY1102",
@@ -43,6 +43,7 @@
     "prepublishOnly": "npm run build:ci",
     "sort": "sort-package-json package.json",
     "test:unit": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests",
     "test:coverage": "jest --coverage",
     "test:dev": "jest --verbose --colors --expand --maxWorkers=50% --detectOpenHandles --errorOnDeprecated --bail",
     "test:watch": "jest --watch --verbose --colors --expand --maxWorkers=25%",
@@ -69,6 +70,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.0.3",
+    "@eslint/js": "^9.39.1",
     "@faker-js/faker": "^7.4.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
@@ -84,7 +86,7 @@
     "@typescript-eslint/parser": "^5.37.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "dts-bundle-generator": "^6.13.0",
-    "eslint": "^8.23.1",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-node": "^4.1.0",
@@ -95,13 +97,16 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unicorn": "^43.0.2",
+    "globals": "^16.5.0",
     "http-status-codes": "^2.2.0",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "lockfile-lint": "^4.8.0",
+    "nyc": "^17.1.0",
     "prettier": "^2.7.1",
     "semantic-release": "^24.0.0",
     "sort-package-json": "^2.10.0",
@@ -110,7 +115,7 @@
     "typescript": "^4.8.3"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=14"
   },
   "dependencies": {
     "chokidar": "^4.0.3",
