--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "."
+    "paths": {
+      "pkg-value-object/*": ["src/*"]
+    },
     "target": "ES6",
     "allowJs": true,
     "skipLibCheck": false,
