--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@AUY1102-001V-G1/AUY1102-001V-G1",
+  "name": "Matishac14/AUY1102-Pipeline-2.2.4",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AUY1102-001V-G1/AUY1102-001V-G1.git"
+    "url": "https://github.com//Matishac14/AUY1102-Pipeline-2.2.4.git"
   },
   "version": "1.0.0",
   "description": "AUY1102",
@@ -43,7 +43,6 @@
     "prepublishOnly": "npm run build:ci",
     "sort": "sort-package-json package.json",
     "test:unit": "jest --passWithNoTests",
-    "test": "jest --passWithNoTests",
     "test:coverage": "jest --coverage",
     "test:dev": "jest --verbose --colors --expand --maxWorkers=50% --detectOpenHandles --errorOnDeprecated --bail",
     "test:watch": "jest --watch --verbose --colors --expand --maxWorkers=25%",
@@ -106,19 +105,19 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "lockfile-lint": "^4.8.0",
-    "nyc": "^17.1.0",
     "prettier": "^2.7.1",
     "semantic-release": "^24.0.0",
     "sort-package-json": "^2.10.0",
     "ts-node-dev": "^2.0.0",
     "tslib": "^2.6.3",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4",
+    "typescript-eslint": "^8.46.3"
   },
   "engines": {
     "node": ">=14"
   },
   "dependencies": {
-    "chokidar": "^4.0.3",
+    "chokidar": "^2.0.3",
     "cosmiconfig": "^6.0.0"
   }
 }
