--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Matishac14/AUY1102-Pipeline-2.2.4",
+  "name": "@matishac14/auy1102-pipeline-2-2-4",
   "repository": {
     "type": "git",
-    "url": "https://github.com//Matishac14/AUY1102-Pipeline-2.2.4.git"
+    "url": "https://github.com/Matishac14/AUY1102-Pipeline-2.2.4.git"
   },
   "version": "1.0.0",
   "description": "AUY1102",
