--- a/.github/workflows/pull_and_push_request.yml
+++ b/.github/workflows/pull_and_push_request.yml
@@ -22,7 +22,10 @@ jobs:
         run: npm install
 
       - name: Lint TypeScript
-        run: npm run lint
+        run: |
+          npm run lint:fix
+          npm run lint
+        
   
   test:
     runs-on: ubuntu-latest
